--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -24,6 +24,109 @@
     }
 }
 
-h2 {
-    color: greenyellow;
-}
+.custom-container.container-fluid {
+    max-width: 1690px;
+  }
+  .philip_main_menu li {
+    display: inline-block;
+    list-style: none;
+    position: relative;
+    z-index: 3;
+  }
+  .philip_main_menu li a {
+    display: block;
+    padding: 40px 0px;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    color: #1a1a1a;
+  }
+  .philip_main_menu li ul.sub-menu {
+    position: absolute;
+    left: 0;
+    top: 120%;
+    width: 250px;
+    background-color: #fff;
+    box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
+    padding: 15px 0;
+    border-top: 5px solid $themeColor;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+  }
+  .philip_main_menu li ul.sub-menu li {
+    display: block;
+  }
+  .philip_main_menu li ul.sub-menu li a {
+    padding: 5px 25px;
+    position: relative;
+    text-align: start;
+  }
+  .philip_main_menu li ul.sub-menu li a:before {
+    position: absolute;
+    left: 25px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 2px;
+    content: "";
+    background-color: $themeColor;
+    transition: 0.3s;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .philip_main_menu li ul.sub-menu li a:hover {
+    padding-left: 40px;
+  }
+  .philip_main_menu li ul.sub-menu li a:hover:before {
+    opacity: 1;
+    visibility: visible;
+  }
+  .philip_main_menu li.has-menu-children:before {
+    position: absolute;
+    right: -18px;
+    top: 50%;
+    transform: translateY(-50%);
+    content: "\f107";
+    font-family: "Font Awesome 5 Pro";
+    font-weight: 500;
+    color: #1a1a1a;
+    transition: 0.4s;
+  }
+  .philip_main_menu li.has-menu-children:after {
+    position: absolute;
+    right: -18px;
+    top: 50%;
+    transform: translateY(-50%);
+    content: "\f107";
+    font-family: "Font Awesome 5 Pro";
+    font-weight: 500;
+    color: $themeColor;
+    transition: 0.3s;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .philip_main_menu li.has-menu-children:hover:before {
+    opacity: 0;
+    visibility: hidden;
+  }
+  .philip_main_menu li.has-menu-children:hover:after {
+    opacity: 1;
+    visibility: visible;
+  }
+  .philip_main_menu li:hover > a {
+    color: red;
+  }
+  .philip_main_menu li:hover ul.sub-menu {
+    opacity: 1;
+    visibility: visible;
+    top: 100%;
+  }
+  
+  .philip_main_menu li:not(:last-child) {
+    margin-right: 30px;
+  }
+  .philip_main_menu li:is(.has-menu-children) {
+    margin-right: 50px;
+  }
