--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,3 +6,8 @@
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
+
+.philip-header-area {
+    background-color: red;
+    color: red;
+}
