--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1642,7 +1642,47 @@ a {
 ul {
   list-style: none;
 }
+.philip-bg-gray {
+  background-color: #F6F6F6;
+}
+.philip-padding-120 {
+  padding: 120px 0;
+}
 
+.philip_progress_single .progress {
+  position: relative;
+}
+.philip_progress_single .progress span {
+  position: absolute;
+}
+.progress_label h5 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #4A4847;
+  margin-bottom: 15px;
+}
+.progress {
+  height: 5px;
+  background-color: #fff;
+  border-radius: .25rem;
+}
+.progress-bar {
+  background-color: #5F41FF;
+  height: 5px;
+  border-radius: 5px;
+}
+.philip_progress_single .progress {
+  position: relative;
+  overflow: inherit;
+}
+.philip_progress_single .progress span {
+  position: absolute;
+  right: 0;
+  top: -35px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #4A4847;
+}
 
 /*
 ************
@@ -1673,6 +1713,24 @@ ul {
 
 .philip_header_border {
   border-bottom: 1px solid #dfe1e1;
+}
+
+.philip-section-title {
+  font-size: 16px;
+  font-weight: 400;
+  color: #5F41FF;
+  text-transform: capitalize;
+}
+.philip-section-heading {
+  color: black;
+  font-size: 56px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.philip-section-content {
+  font-size: 16px;
+  color: #707070;
+  font-weight: 400;
 }
 
 .philip_border_right {
@@ -1894,13 +1952,39 @@ ul {
   height: 1px;
   width: 54px;
   left: 60px;
-  text-align: ;
   top: 13px;
   position: absolute;
 }
 .philip-banner-image img {
   max-width: 122%;
 }
+.philip-about-image img {
+  background: #EFEFEF;
+  padding: 56px 83px 0 83px;
+}
+.philip-about-image {
+  text-align: right;
+  margin-right: 50px;
+  position: relative;
+}
+.content-box {
+  background-color: #fff;
+  display: inline-block;
+  text-align: center;
+  color: #5F41FF;
+  padding: 20px;
+  border-radius: 16px;
+  box-shadow: -12px 12px 0px -2px;
+  position: absolute;
+  bottom: 91px;
+  left: -14px;
+}
+.content-box span {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+/* about css  */
 /*
 ************
 *************************
