--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,11 +3,10 @@
 @forward  './abstracts/mixins';
 @forward  './abstracts/common';
 @forward './components/header';
+@forward './components/about';
+@forward './components/service';
+@forward './components/banner';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
 
-.philip-header-area {
-    background-color: red;
-    color: red;
-}
