--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 // Font Family 
-$poppins: 'Poppins', sans-serif;
-$opensans: 'Open Sans', sans-serif;
+$roboto: 'Roboto', sans-serif;
+$nunito: 'Nunito Sans', sans-serif;
+$dmSans: 'DM Sans', sans-serif;
+
 
 // Responsive Variables
 $over:'(min-width: 1800px)';
