--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -7,10 +7,7 @@
 02. Header
 ******************************************************* 
 *************************************************************** */
-.philip-header-area {
-  color: red;
-  background-color: red;
-}
+
 .header-sticky {
     &:is(.sticky) {
         position: fixed;
@@ -27,109 +24,186 @@
     }
 }
 
+.philip-bg-gray {
+  background-color: #F6F6F6;
+}
+.philip-padding-120 {
+  padding: 120px 0;
+}
+
+/*
+************
+*************************
+02. Header
+******************************************************* 
+*************************************************************** */
+.header-sticky:is(.sticky) {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  z-index: 9;
+  left: 0;
+  right: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  -webkit-animation: 800ms ease-in-out 0s normal none 1 running fadeInDown;
+          animation: 800ms ease-in-out 0s normal none 1 running fadeInDown;
+  width: 100%;
+  border-bottom: 0px;
+}
+
 .custom-container.container-fluid {
-    max-width: 1690px;
-  }
-  .philip_main_menu li {
-    display: inline-block;
-    list-style: none;
-    position: relative;
-    z-index: 3;
-  }
-  .philip_main_menu li a {
-    display: block;
-    padding: 40px 0px;
-    font-size: 16px;
-    text-decoration: none;
-    font-weight: 400;
-    font-family: "Poppins", sans-serif;
-    color: #1a1a1a;
-  }
-  .philip_main_menu li ul.sub-menu {
-    position: absolute;
-    left: 0;
-    top: 120%;
-    width: 250px;
-    background-color: #fff;
-    box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
-    padding: 15px 0;
-    border-top: 5px solid $themeColor;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.3s;
-  }
-  .philip_main_menu li ul.sub-menu li {
-    display: block;
-  }
-  .philip_main_menu li ul.sub-menu li a {
-    padding: 5px 25px;
-    position: relative;
-    text-align: start;
-  }
-  .philip_main_menu li ul.sub-menu li a:before {
-    position: absolute;
-    left: 25px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 10px;
-    height: 2px;
-    content: "";
-    background-color: $themeColor;
-    transition: 0.3s;
-    opacity: 0;
-    visibility: hidden;
-  }
-  .philip_main_menu li ul.sub-menu li a:hover {
-    padding-left: 40px;
-  }
-  .philip_main_menu li ul.sub-menu li a:hover:before {
-    opacity: 1;
-    visibility: visible;
-  }
-  .philip_main_menu li.has-menu-children:before {
-    position: absolute;
-    right: -18px;
-    top: 50%;
-    transform: translateY(-50%);
-    content: "\f107";
-    font-family: "Font Awesome 5 Pro";
-    font-weight: 500;
-    color: #1a1a1a;
-    transition: 0.4s;
-  }
-  .philip_main_menu li.has-menu-children:after {
-    position: absolute;
-    right: -18px;
-    top: 50%;
-    transform: translateY(-50%);
-    content: "\f107";
-    font-family: "Font Awesome 5 Pro";
-    font-weight: 500;
-    color: $themeColor;
-    transition: 0.3s;
-    opacity: 0;
-    visibility: hidden;
-  }
-  .philip_main_menu li.has-menu-children:hover:before {
-    opacity: 0;
-    visibility: hidden;
-  }
-  .philip_main_menu li.has-menu-children:hover:after {
-    opacity: 1;
-    visibility: visible;
-  }
-  .philip_main_menu li:hover > a {
-    color: red;
-  }
-  .philip_main_menu li:hover ul.sub-menu {
-    opacity: 1;
-    visibility: visible;
-    top: 100%;
-  }
-  
-  .philip_main_menu li:not(:last-child) {
-    margin-right: 30px;
-  }
-  .philip_main_menu li:is(.has-menu-children) {
-    margin-right: 50px;
-  }
+  max-width: 1690px;
+}
+.has-menu-children span {
+  font-size: 12px;
+}
+.philip_header_border {
+  border-bottom: 1px solid #dfe1e1;
+}
+
+.philip-section-title {
+  font-size: 16px;
+  font-weight: 400;
+  color: #5F41FF;
+  text-transform: capitalize;
+}
+.philip-section-heading {
+  color: black;
+  font-size: 56px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.philip-section-content {
+  font-size: 16px;
+  color: #707070;
+  font-weight: 400;
+}
+
+.philip_border_right {
+  border-right: 1px solid #dfe1e1;
+}
+
+.philip_main_menu li {
+  display: inline-block;
+  list-style: none;
+  position: relative;
+  z-index: 3;
+}
+
+.philip_main_menu li a {
+  display: block;
+  padding: 50px 0px;
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: 400;
+  font-family: $dmSans;
+  color: #1a1a1a;
+}
+.philip_main_menu li ul.sub-menu li a {
+  padding: 0;
+}
+.philip_main_menu li ul.sub-menu {
+  position: absolute;
+  left: 0;
+  top: 120%;
+  width: 250px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
+  padding: 26px 30px;
+  border-top: 5px solid #5F41FF;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.sub-menu-three {
+  background: #fff;
+  position: absolute;
+  left: 224px;
+  top: 0;
+  width: 250px;
+  box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
+  padding: 26px 30px;
+  border-top: 5px solid #5F41FF;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.sub-menu li:hover ul.sub-menu-three {
+  opacity: 1;
+  visibility: visible;
+}
+
+.philip_main_menu li ul.sub-menu li {
+  display: block;
+  margin: 0;
+  margin-bottom: 24px;
+}
+
+
+.philip_main_menu li ul.sub-menu li a {
+  position: relative;
+  text-align: start;
+}
+
+.philip_main_menu li ul.sub-menu li a:before {
+  position: absolute;
+  left: 25px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 10px;
+  height: 2px;
+  content: "";
+  background-color: #5F41FF;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.philip_main_menu li ul.sub-menu li a:hover {
+  padding-left: 40px;
+}
+.philip_main_menu li.has-menu-children {
+  margin-right: 43px;
+}
+.philip_main_menu li.has-menu-children::before {
+  position: absolute;
+right: -18px;
+top: 50%;
+transform: translateY(-50%);
+content: "\f107";
+font-family: "Font Awesome 5 Pro";
+font-weight: 500;
+color: #1a1a1a;
+}
+.philip_main_menu li.has-menu-children:hover::before {
+  color: #5F41FF;
+}
+.philip_main_menu li:hover > a,.has-menu-children {
+  color: #5F41FF;
+}
+.philip_main_menu li:hover ul.sub-menu {
+  opacity: 1;
+  visibility: visible;
+  top: 100%;
+}
+.philip_main_menu li {
+  margin: 0 21.5px;
+}
+.philip_quick_contact-nav {
+  margin-left: 40px;
+}
+.philip_quick_contact {
+  display: inline-flex;
+}
+.philip_quick_contact {
+  color: black
+}
