--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -62,6 +62,9 @@ CSS INDEX
 .mb-27 {
     margin-bottom: 27px;
   }
+.mb-39 {
+    margin-bottom: 39px;
+}
   .mr-38 {
     margin-right: 38px;
   }
