--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -59,11 +59,17 @@ CSS INDEX
 .mb-8 {
     margin-bottom: 8px;
   }
+.mb-16 {
+    margin-bottom: 16px;
+}
 .mb-27 {
     margin-bottom: 27px;
   }
 .mb-39 {
     margin-bottom: 39px;
+}
+.mb-44 {
+    margin-bottom: 44px;
 }
   .mr-38 {
     margin-right: 38px;
