--- a/assets/scss/components/_banner.scss
+++ b/assets/scss/components/_banner.scss
@@ -158,6 +158,7 @@
   .philip-social p {
     font-size: 16px;
     color: black;
+    margin-bottom: 16px;
   }
   .philip-social-list li:not(:last-child) {
     margin-right: 20px;
