--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -36,6 +36,9 @@
   .philip-section-content {
     margin: 0;
   }
+  .philip-section-heading {
+    margin-bottom: 22px;
+  }
   .content-box span {
     font-size: 60px;
     font-weight: bold;
