--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -55,8 +55,7 @@
   .progress_label h5 {
     font-size: 18px;
     font-weight: 400;
-    color: #4A4847;
-    margin-bottom: 15px;
+    color: #707070;
   }
   .progress {
     height: 5px;
