--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -68,16 +68,29 @@ CSS INDEX
 .mb-39 {
     margin-bottom: 39px;
 }
+.mb-67 {
+    margin-bottom: 67px;
+}
+
+.mb-43 {
+    margin-bottom: 43px;
+}
 .mb-44 {
     margin-bottom: 44px;
 }
-  .mr-38 {
+.mr-38 {
     margin-right: 38px;
   }
-  .mt-44 {
+.mt-29 {
+    margin-top: 29px;
+}
+.mt-43 {
+    margin-top: 43px;
+}
+.mt-44 {
     margin-top: 44px;
-  }
-  .pt-56 {
+}
+.pt-56 {
     padding-top: 56px;
   }
   
