--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @forward './components/about';
 @forward './components/service';
 @forward './components/banner';
+@forward './components/portfolio';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
