--- a/assets/scss/components/_banner.scss
+++ b/assets/scss/components/_banner.scss
@@ -58,6 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid #5F41FF;
   }
   .philip-button a:hover {
     background-color: #fff;
