--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 ************
 *************************
@@ -104,6 +103,9 @@ body {
 .img, img {
   max-width: 100%;
   -webkit-transition: all 0.3s linear 0s;
+  -moz-transition: all 0.3s linear 0s;
+  -ms-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
   transition: all 0.3s linear 0s;
 }
 
@@ -126,6 +128,9 @@ a {
 a,
 .button {
   -webkit-transition: all 0.3s linear 0s;
+  -moz-transition: all 0.3s linear 0s;
+  -ms-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
   transition: all 0.3s linear 0s;
 }
 
@@ -257,21 +262,24 @@ input::-webkit-input-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+input:-moz-placeholder {
+  color: #878c8f;
+  font-size: 16px;
+  opacity: 1;
   transition: 0.5s;
 }
 input::-moz-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -moz-transition: 0.5s;
   transition: 0.5s;
 }
 input:-ms-input-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -ms-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -279,38 +287,25 @@ textarea::-webkit-input-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+textarea:-moz-placeholder {
+  color: #878c8f;
+  font-size: 16px;
+  opacity: 1;
   transition: 0.5s;
 }
 textarea::-moz-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -moz-transition: 0.5s;
   transition: 0.5s;
 }
 textarea:-ms-input-placeholder {
   color: #878c8f;
   font-size: 16px;
   opacity: 1;
-  -ms-transition: 0.5s;
   transition: 0.5s;
-}
-
-input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
-  opacity: 0;
-}
-
-input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
-  opacity: 0;
-}
-
-input:focus:-ms-input-placeholder, textarea:focus:-ms-input-placeholder {
-  opacity: 0;
-}
-
-input:focus::-ms-input-placeholder, textarea:focus::-ms-input-placeholder {
-  opacity: 0;
 }
 
 input:focus::placeholder, textarea:focus::placeholder {
@@ -1700,12 +1695,9 @@ input:focus::placeholder, textarea:focus::placeholder {
   z-index: 9;
   left: 0;
   right: 0;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
-  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  -webkit-animation: 800ms ease-in-out 0s normal none 1 running fadeInDown;
-          animation: 800ms ease-in-out 0s normal none 1 running fadeInDown;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  animation: 800ms ease-in-out 0s normal none 1 running fadeInDown;
   width: 100%;
   border-bottom: 0px;
 }
@@ -1834,8 +1826,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   left: 224px;
   top: 0;
   width: 250px;
-  -webkit-box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
   padding: 26px 30px;
   border-top: 5px solid #5F41FF;
   opacity: 0;
@@ -1888,9 +1879,8 @@ input:focus::placeholder, textarea:focus::placeholder {
   position: absolute;
   right: -18px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  content: "";
+  transform: translateY(-50%);
+  content: "\f107";
   font-family: "Font Awesome 5 Pro";
   font-weight: 500;
   color: #1a1a1a;
@@ -1919,8 +1909,6 @@ input:focus::placeholder, textarea:focus::placeholder {
 }
 
 .philip_quick_contact {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
 }
 
@@ -2035,13 +2023,11 @@ input:focus::placeholder, textarea:focus::placeholder {
 
 .philip-service-item span {
   color: #5F41FF;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .philip-service:hover .philip-service-content h3 {
   color: #5F41FF;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -2146,15 +2132,9 @@ input:focus::placeholder, textarea:focus::placeholder {
   text-decoration: none;
   display: inline-block;
   border-radius: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #5F41FF;
 }
 
@@ -2162,7 +2142,6 @@ input:focus::placeholder, textarea:focus::placeholder {
   background-color: #fff;
   color: #5F41FF;
   border: 1px solid #5F41Ff;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -2172,15 +2151,9 @@ input:focus::placeholder, textarea:focus::placeholder {
   height: 80px;
   width: 80px;
   display: inline-block;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
   color: #5F41FF;
 }
@@ -2231,55 +2204,24 @@ input:focus::placeholder, textarea:focus::placeholder {
   border: 4px solid #5F41FF42;
 }
 
-@-webkit-keyframes myAnim {
-  0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 1;
-  }
-  30% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 1;
-    background: 5F41FF;
-    border: 2px solid #5F41FF;
-  }
-  50% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    opacity: 0.7;
-    background: #ffffff;
-  }
-  100% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-    opacity: 0;
-    border: 2px solid #5F41FF;
-  }
-}
-
 @keyframes myAnim {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
     opacity: 1;
   }
   30% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
     opacity: 1;
     background: 5F41FF;
     border: 2px solid #5F41FF;
   }
   50% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     opacity: 0.7;
     background: #ffffff;
   }
   100% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    transform: scale(1.5);
     opacity: 0;
     border: 2px solid #5F41FF;
   }
@@ -2311,7 +2253,6 @@ input:focus::placeholder, textarea:focus::placeholder {
 
 .philip-social-list li a:hover {
   color: #5F41FF;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -2352,8 +2293,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   color: #5F41FF;
   padding: 20px;
   border-radius: 16px;
-  -webkit-box-shadow: -12px 12px 0px -2px;
-          box-shadow: -12px 12px 0px -2px;
+  box-shadow: -12px 12px 0px -2px;
   position: absolute;
   bottom: 91px;
   left: -14px;
@@ -2396,8 +2336,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   border-left-style: solid;
   border-left-width: 1px;
   border-radius: 0%;
-  -webkit-box-shadow: 0px 0px 0px 0px #cccccc;
-          box-shadow: 0px 0px 0px 0px #cccccc;
+  box-shadow: 0px 0px 0px 0px #cccccc;
   display: inline-block;
   width: 100%;
 }
@@ -2409,7 +2348,6 @@ input:focus::placeholder, textarea:focus::placeholder {
   height: 0px;
   width: 0px;
   background-color: transparent;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   opacity: 0;
 }
@@ -2446,10 +2384,13 @@ input:focus::placeholder, textarea:focus::placeholder {
 .hoverinner {
   position: absolute;
   top: 0;
-  height: 0;
-  width: 0;
+  height: 100%;
+  left: 0;
+  width: 100%;
+  transition: 0.4s;
   background: #00000075;
   color: #fff;
+  transition: all 0.3s;
   opacity: 0;
   visibility: hidden;
 }
@@ -2459,6 +2400,9 @@ input:focus::placeholder, textarea:focus::placeholder {
   display: block;
   height: 1px;
   width: 150px;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: all 0.3s;
   background: #acacac;
   top: 70px;
   position: absolute;
@@ -2473,8 +2417,11 @@ input:focus::placeholder, textarea:focus::placeholder {
   width: 1px;
   background: #acacac;
   top: 50px;
+  transition: all 0.3s;
   position: absolute;
   bottom: 0;
+  transform: scale(0);
+  transform-origin: top left;
   left: 76px;
 }
 
@@ -2485,16 +2432,22 @@ input:focus::placeholder, textarea:focus::placeholder {
   width: 150px;
   background: #acacac;
   position: absolute;
+  transition: all 0.3s;
   bottom: 70px;
+  transform: scale(0);
+  transform-origin: bottom right;
   right: 50px;
 }
 
 .hoverinner2::after {
   content: "";
+  transition: all 0.3s;
   display: block;
   height: 150px;
   width: 1px;
   background: #acacac;
+  transform: scale(0);
+  transform-origin: bottom right;
   position: absolute;
   bottom: 50px;
   right: 76px;
@@ -2508,13 +2461,13 @@ input:focus::placeholder, textarea:focus::placeholder {
   list-style: none;
 }
 
+.philip-portfolio-item:hover .hoverinner1::before, .philip-portfolio-item:hover .hoverinner1::after, .philip-portfolio-item:hover .hoverinner2::before, .philip-portfolio-item:hover .hoverinner2::after {
+  transform: scale(1);
+}
+
 .philip-portfolio-item:hover .hoverinner {
-  height: 100%;
-  width: 100%;
   opacity: 1;
   visibility: visible;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
 
 /*
@@ -2594,20 +2547,21 @@ input:focus::placeholder, textarea:focus::placeholder {
   cursor: pointer;
   display: block;
   border-radius: 50px;
-  -webkit-box-shadow: inset 0 0 0 2px #1a1a1a;
-          box-shadow: inset 0 0 0 2px #1a1a1a;
+  box-shadow: inset 0 0 0 2px #1a1a1a;
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  -webkit-transform: translateY(15px);
-          transform: translateY(15px);
+  transform: translateY(15px);
   -webkit-transition: all 0.3s linear 0s;
+  -moz-transition: all 0.3s linear 0s;
+  -ms-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
   transition: all 0.3s linear 0s;
   background-color: #fff;
 }
 .progress-wrap::after {
   position: absolute;
-  content: "";
+  content: "\f176";
   font-family: "Font Awesome 5 Pro";
   text-align: center;
   line-height: 46px;
@@ -2629,14 +2583,15 @@ input:focus::placeholder, textarea:focus::placeholder {
 .progress-wrap svg.progress-circle path {
   stroke: #F94D1C;
   stroke-width: 4;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-transition: all 0.3s linear 0s;
+  -moz-transition: all 0.3s linear 0s;
+  -ms-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
   transition: all 0.3s linear 0s;
 }
 .progress-wrap:is(.progress-wrap-dark) {
-  -webkit-box-shadow: inset 0 0 0 2px #f6f8fa;
-          box-shadow: inset 0 0 0 2px #f6f8fa;
+  box-shadow: inset 0 0 0 2px #f6f8fa;
   background-color: transparent;
 }
 .progress-wrap:is(.progress-wrap-dark)::after {
@@ -2650,8 +2605,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   opacity: 1;
   right: 50px;
   visibility: visible;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 @media (max-width: 767px) {
   .progress-wrap.active-progress {
@@ -2670,3 +2624,5 @@ input:focus::placeholder, textarea:focus::placeholder {
 23. Footer
 ******************************************************* 
 *************************************************************** */
+
+/*# sourceMappingURL=main.css.map */
